--- a/_cards.scss
+++ b/_cards.scss
@@ -5,11 +5,22 @@
   @include flex-column;
   gap: 1rem;
 
+  @media (min-width:768px) and (max-width: 1024px) {
+    @include flex-row;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    justify-content: center;
+  }
+
   &_content {
     display: flex;
     gap: 2rem;
     background-color: $tertiary-bgcolor;
     padding: 2rem;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      width: 48%;
+    }
   }
 
   .content-image {
@@ -44,15 +55,26 @@
   padding: 4rem 0;
   gap: 2rem;
 
+  @media(min-width: 768px) and (max-width: 1024px) {
+    @include flex-row;
+  }
+
   .card-content {
     @include flex-column;
     background-color: $card-bgcolor;
     position: relative;
+    box-shadow: 1px 1px 12px #C18E3C;
   }
 
   .card-top_image img {
     width: 100%;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      height: 40vh;
+      object-fit: cover;
+    }
   }
+
 
   .over-image {
     position: absolute;
@@ -60,6 +82,13 @@
     border-radius: 50%;
     bottom: 9rem;
     left: 1rem;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      left: 3rem;
+      right: 3rem;
+      bottom: 24rem;
+      display: flex;
+    }
   }
 
   .over-image img {
@@ -70,6 +99,12 @@
 
   .over-image_upper {
     bottom: 12rem;
+
+    @media (min-width: 768px) and (max-width: 1024px){
+      bottom: 20rem;
+      left: 1rem;
+      right: auto;
+    }
   }
 
   .card-text {
@@ -93,30 +128,55 @@
 
 }
 
-.simple-card_lighter {
-  //content
-  background-color: inherit;
-  gap: 1rem;
-  padding: 2rem 0rem;
+.simple-card_form {
+  @include flex-column;
+
+  .simple-card_lighter {
+    //content
+    background-color: inherit;
+    gap: 1rem;
+    padding: 2rem 0rem;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      width: 90%;
+    }
+  }
 
 
   .content-image_lighter {
     background-color: $perfomance-image_bgcolor;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      display: flex;
+      height: fit-content;
+    }
   }
 
   .content-image_lighter img {
     width: 4rem;
     filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      padding: 0;
+    }
   }
 
   .content-title_thin {
     font-family: $secondary-font;
     font-size: 1.1rem;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      font-size: 1.3rem;
+    }
   }
 
   .content-description_gray {
     color: $paragraph_color;
     font-weight: normal;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      font-size: 1rem;
+    }
   }
 }
 
@@ -126,8 +186,17 @@
   gap: 3rem;
   padding-top: 3rem;
 
+  @media (min-width: 768px) and (max-width: 1024px) {
+    @include flex-row;
+    gap: 1rem;
+  }
+
   .card-hover_content {
     @include flex-column;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      width: 25%;
+    }
   }
 
   .bg-image {
@@ -137,11 +206,20 @@
 
   .bg-image img {
     width: 100%;
+
+    @media (min-width:768px) and (max-width:1024px) {
+      height: 40vh;
+      object-fit: cover;
+    }
   }
 
   .higher {
     height: 17.5rem;
     object-fit: cover;
+
+    @media (min-width: 768px) and (max-width: 1024px) {
+      height: 40vh;
+    }
   }
 
   .card-hover_text {
@@ -166,67 +244,78 @@
   gap: 1.5rem;
   padding-top: 2rem;
 
-  .customer-card_content {
-    display: flex;
-    flex-direction: column-reverse;
-    background-color: $card-bgcolor;
-    padding: 2rem;
-    font-family: $primary-font;
-  }
+@media (min-width: 768px) {
+  @include flex-row;
+}
 
-  .customer-info {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    padding-top: 1rem;
-  }
+.customer-card_content {
+  display: flex;
+  flex-direction: column-reverse;
+  background-color: $card-bgcolor;
+  padding: 2rem;
+  font-family: $primary-font;
+  box-shadow: 1px 1px 12px #C18E3C;
 
-  .customer-info img {
-    width: 5rem;
-    border-radius: 50%;
-  }
+}
 
-  .name {
-    font-weight: 500;
-    font-size: 1.2rem;
-  }
+.customer-info {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  padding-top: 1rem;
+}
 
-  .post {
-    color: $main-color;
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
+.customer-info img {
+  width: 5rem;
+  border-radius: 50%;
+}
 
-  .customer-feedback {
-    color: $sub-topic_color;
-    font-size: 0.9rem;
-  }
+.name {
+  font-weight: 500;
+  font-size: 1.2rem;
+}
+
+.post {
+  color: $main-color;
+  font-size: 0.8rem;
+  font-weight: 600;
+}
+
+.customer-feedback {
+  color: $sub-topic_color;
+  font-size: 0.9rem;
+}
 }
 
 .simple-card_footer {
 
   .simple-card_content {
     padding: 0;
-    
+    width: unset;
+
     .footer-card_image img {
       width: 5rem;
       height: 5rem;
       border-radius: 5%;
       object-fit: cover;
     }
-    .post-title{
+
+    .post-title {
       color: $paragraph_color;
       font-weight: 600;
     }
-    .date{
+
+    .date {
       color: $main-color;
       font-size: 0.8rem;
     }
-    .author{
+
+    .author {
       color: $main-color;
       font-size: 0.8rem;
     }
-    .comments{
+
+    .comments {
       color: $main-color;
       font-size: 0.8rem;
     }
