--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .simple-card {
-    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     gap: 0.5rem;
@@ -26,7 +25,9 @@
 .simple-card .content-image {
   background-color: #262626;
   border-radius: 50%;
-  padding: 1rem;
+  padding: 0.5rem;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 .simple-card .content-image img {
   width: 50px;
@@ -45,6 +46,25 @@
   font-weight: 600;
   font-size: 0.8rem;
 }
+@media (min-width: 1025px) {
+  .simple-card .content-description {
+    text-wrap: nowrap;
+  }
+}
+
+@media (min-width: 1025px) {
+  .simple-card_top {
+    flex-direction: row;
+    position: absolute;
+    top: 110%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+}
+.simple-card_top .simple-card_content {
+  padding: 1.5rem 3rem;
+  align-items: center;
+}
 
 .cards-container {
   display: flex;
@@ -52,10 +72,14 @@
   padding: 4rem 0;
   gap: 2rem;
 }
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) {
   .cards-container {
-    display: flex;
     flex-direction: row;
+  }
+}
+@media (min-width: 1025px) {
+  .cards-container {
+    padding: 4rem 2rem;
   }
 }
 .cards-container .card-content {
@@ -81,6 +105,8 @@
   border-radius: 50%;
   bottom: 9rem;
   left: 1rem;
+  max-width: -moz-fit-content;
+  max-width: fit-content;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .cards-container .over-image {
@@ -90,12 +116,19 @@
     display: flex;
   }
 }
+@media (min-width: 1025px) {
+  .cards-container .over-image {
+    bottom: 12rem;
+    left: 2rem;
+  }
+}
 .cards-container .over-image img {
   filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
   width: 4rem;
   padding: 0.5rem;
 }
 .cards-container .over-image_upper {
+  background-color: #C18E3C;
   bottom: 12rem;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
@@ -104,6 +137,16 @@
     left: 1rem;
     right: auto;
   }
+}
+@media (min-width: 1025px) {
+  .cards-container .over-image_upper {
+    bottom: 12rem;
+    left: 0.5rem;
+  }
+}
+.cards-container .over-image_upper img {
+  filter: invert(1);
+  width: 5rem;
 }
 .cards-container .card-text {
   padding: 2rem;
@@ -125,6 +168,11 @@
 .simple-card_form {
   display: flex;
   flex-direction: column;
+}
+@media (min-width: 1025px) {
+  .simple-card_form {
+    gap: 0;
+  }
 }
 .simple-card_form .simple-card_lighter {
   background-color: inherit;
@@ -164,6 +212,11 @@
     font-size: 1.3rem;
   }
 }
+@media (min-width: 1025px) {
+  .simple-card_form .content-title_thin {
+    font-size: 1.5rem;
+  }
+}
 .simple-card_form .content-description_gray {
   color: #999999;
   font-weight: normal;
@@ -173,6 +226,12 @@
     font-size: 1rem;
   }
 }
+@media (min-width: 1025px) {
+  .simple-card_form .content-description_gray {
+    font-size: 1rem;
+    text-wrap: wrap;
+  }
+}
 
 .cards-hover_container {
   display: flex;
@@ -180,9 +239,13 @@
   gap: 3rem;
   padding-top: 3rem;
 }
+@media (min-width: 1025px) {
+  .cards-hover_container {
+    flex-direction: row;
+  }
+}
 @media (min-width: 768px) and (max-width: 1024px) {
   .cards-hover_container {
-    display: flex;
     flex-direction: row;
     gap: 1rem;
   }
@@ -190,8 +253,9 @@
 .cards-hover_container .card-hover_content {
   display: flex;
   flex-direction: column;
+  position: relative;
 }
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) {
   .cards-hover_container .card-hover_content {
     width: 25%;
   }
@@ -200,12 +264,46 @@
   width: 100%;
   position: relative;
 }
+@media (min-width: 1025px) {
+  .cards-hover_container .bg-image {
+    height: 20rem;
+  }
+}
+.cards-hover_container .bg-image:hover img {
+  transition: 0.5s;
+  filter: brightness(0.5);
+}
+.cards-hover_container .bg-image:hover .card-hover_text {
+  opacity: 1;
+  padding-left: 0.5rem;
+  transition: 0.5s;
+}
+@media (min-width: 1025px) {
+  .cards-hover_container .bg-image:hover::before {
+    content: "";
+    position: absolute;
+    width: calc(100% - 2rem);
+    height: calc(100% - 2rem);
+    border: 2px solid #C18E3C;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 5;
+  }
+}
 .cards-hover_container .bg-image img {
   width: 100%;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .cards-hover_container .bg-image img {
     height: 40vh;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+@media (min-width: 1025px) {
+  .cards-hover_container .bg-image img {
+    height: 100%;
     -o-object-fit: cover;
        object-fit: cover;
   }
@@ -220,12 +318,22 @@
     height: 40vh;
   }
 }
+@media (min-width: 1025px) {
+  .cards-hover_container .higher {
+    height: 13rem;
+  }
+}
 .cards-hover_container .card-hover_text {
   position: absolute;
   bottom: 1rem;
   left: 1rem;
 }
-.cards-hover_container .card-hover_title {
+@media (min-width: 1025px) {
+  .cards-hover_container .card-hover_text {
+    opacity: 0;
+  }
+}
+.cards-hover_container .card-hover_text .card-hover_title {
   font-family: "Cormorant Garamond", serif;
   color: #ffffff;
 }
@@ -242,8 +350,12 @@
 }
 @media (min-width: 768px) {
   .customer-card_container {
-    display: flex;
     flex-direction: row;
+  }
+}
+@media (min-width: 1025px) {
+  .customer-card_container {
+    padding: 4.5rem;
   }
 }
 .customer-card_container .customer-card_content {
@@ -328,6 +440,11 @@ header {
   background-color: #191919;
   font-family: "Poppins", sans-serif;
 }
+@media (min-width: 1025px) {
+  header {
+    position: relative;
+  }
+}
 header .header-container {
   padding: 2rem;
   display: flex;
@@ -335,9 +452,9 @@ header .header-container {
 }
 @media (min-width: 768px) {
   header .header-container {
-    display: flex;
     flex-direction: row;
     gap: 2rem;
+    justify-content: center;
   }
 }
 header .logo {
@@ -448,8 +565,25 @@ header .contact-description {
     padding: 5rem 1rem;
   }
 }
+@media (min-width: 1025px) {
+  .navbar {
+    flex-direction: row;
+    padding: 0rem 2.5rem;
+    justify-content: center;
+    position: absolute;
+    top: 8rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5;
+  }
+}
 .navbar .navbar-container {
   padding: 1rem 0;
+}
+@media (min-width: 1025px) {
+  .navbar .navbar-container {
+    display: flex;
+  }
 }
 .navbar .icon {
   position: absolute;
@@ -459,6 +593,11 @@ header .contact-description {
   cursor: pointer;
   filter: invert(100%);
 }
+@media (min-width: 1025px) {
+  .navbar .icon {
+    position: unset;
+  }
+}
 .navbar .icon img {
   width: 1.5rem;
 }
@@ -467,10 +606,20 @@ header .contact-description {
     width: 1.3rem;
   }
 }
+@media (min-width: 1025px) {
+  .navbar .list {
+    padding: 0rem 1rem;
+  }
+}
 .navbar .pages {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+@media (min-width: 1025px) {
+  .navbar .pages {
+    flex-direction: row;
+  }
 }
 .navbar .pages li a {
   color: #ffffff;
@@ -499,6 +648,11 @@ header .contact-description {
   flex-direction: column;
   justify-content: center;
   color: #ffffff;
+}
+@media (min-width: 1024px) {
+  .Introduction {
+    position: relative;
+  }
 }
 .Introduction .Introduction-container {
   display: flex;
@@ -556,7 +710,7 @@ header .contact-description {
   color: rgba(0, 0, 0, 0.8);
   font-size: 2rem;
 }
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) {
   .section .section-subtitle {
     font-size: 3rem;
   }
@@ -567,8 +721,16 @@ header .contact-description {
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .black-section {
-    display: flex;
     flex-direction: row;
+  }
+}
+@media (min-width: 1025px) {
+  .black-section {
+    display: flex;
+    flex-direction: row-reverse;
+    -moz-column-gap: 3rem;
+         column-gap: 3rem;
+    padding: 5rem 3rem;
   }
 }
 .black-section .sub-white {
@@ -576,7 +738,7 @@ header .contact-description {
   color: #ffffff;
   text-align: center;
 }
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) {
   .black-section .sub-white {
     width: 50%;
     font-size: 3rem;
@@ -594,10 +756,24 @@ header .contact-description {
     width: 70%;
   }
 }
+@media (min-width: 1025px) {
+  .black-section .section-description {
+    width: 50%;
+  }
+}
 .black-section .about-image img {
   width: 100%;
   position: relative;
   top: 6rem;
+  border-radius: 5px;
+}
+@media (min-width: 1025px) {
+  .black-section .about-image img {
+    top: 8rem;
+    width: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .black-section .about-image {
@@ -613,19 +789,34 @@ header .contact-description {
   display: flex;
   flex-direction: column;
 }
+@media (min-width: 1025px) {
+  .perfomance-container {
+    width: 50%;
+  }
+}
 .perfomance-container .section-intro_left {
   align-items: unset;
 }
 .perfomance-container .sub-white_left {
   text-align: left;
 }
-.perfomance-container .section-description {
+.perfomance-container .section-description_left {
   text-align: left;
   padding-bottom: 2rem;
+}
+@media (min-width: 1025px) {
+  .perfomance-container .section-description_left {
+    width: 100%;
+  }
 }
 
 .form {
   background-color: #ffffff;
+}
+@media (min-width: 1025px) {
+  .form {
+    width: 50%;
+  }
 }
 .form .evaluation {
   display: flex;
@@ -647,10 +838,19 @@ header .contact-description {
   flex-direction: column;
   gap: 2rem;
 }
+@media (min-width: 1025px) {
+  .form .form-requirements {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
 .form .box {
   display: flex;
   flex-direction: column;
   background-color: #f7f7f7;
+}
+.form .full-width_desktop {
+  width: 100%;
 }
 .form label {
   color: #C18E3C;
@@ -679,6 +879,8 @@ header .contact-description {
 
 .reminder {
   background: linear-gradient(rgba(193, 142, 60, 0.896), rgba(193, 142, 60, 0.896)), url(./images/legal-advicer.webp);
+  background-size: cover;
+  background-position: center;
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -689,11 +891,22 @@ header .contact-description {
     position: relative;
   }
 }
+@media (min-width: 1025px) {
+  .reminder {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
 .reminder .reminder-content {
   display: flex;
   flex-direction: column;
   padding: 1rem 0.5rem;
   gap: 0.5rem;
+}
+@media (min-width: 1025px) {
+  .reminder .reminder-content {
+    flex-direction: row;
+  }
 }
 .reminder .reminder-title {
   font-family: "Cormorant Garamond", serif;
@@ -701,7 +914,7 @@ header .contact-description {
   font-size: 2rem;
   font-weight: 500;
 }
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) {
   .reminder .reminder-title {
     font-size: 2.5rem;
     font-weight: 600;
@@ -714,6 +927,11 @@ header .contact-description {
 }
 .reminder .reminder-button {
   padding-top: 1rem;
+}
+@media (min-width: 1025px) {
+  .reminder .reminder-button {
+    padding: 1.5rem;
+  }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .reminder .reminder-button .reminder-button_absolute {
@@ -729,6 +947,12 @@ header .contact-description {
   font-family: "Poppins", sans-serif;
   padding: 1rem;
   font-size: 0.8rem;
+  font-weight: 600;
+}
+@media (min-width: 1025px) {
+  .reminder .reminder-btn {
+    padding: 1rem 1.5rem;
+  }
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .reminder .reminder-btn .reminder-btn_absolute {
@@ -743,10 +967,17 @@ header .contact-description {
   font-family: "Poppins", sans-serif;
   padding: 1rem;
   font-size: 0.8rem;
+  font-weight: 600;
 }
-
-.reminder-content_center {
+.reminder .reminder-content_center {
   align-items: center;
+}
+@media (min-width: 1025px) {
+  .reminder .reminder-content_center {
+    display: flex;
+    flex-direction: column;
+    padding: 4rem 0;
+  }
 }
 
 footer {
@@ -760,12 +991,18 @@ footer .footer-container {
   flex-direction: column;
   padding: 6rem 0.5rem 0rem 0.5rem;
 }
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 1024px) {
   footer .footer-container {
-    display: flex;
     flex-direction: row;
     padding: 6rem 1rem 0rem 1rem;
     flex-wrap: wrap;
+  }
+}
+@media (min-width: 1025px) {
+  footer .footer-container {
+    flex-direction: row;
+    padding: 5rem 3rem;
+    justify-content: space-around;
   }
 }
 @media (min-width: 768px) {
@@ -773,6 +1010,11 @@ footer .footer-container {
     display: flex;
     flex-direction: column;
     width: 50%;
+  }
+}
+@media (min-width: 1025px) {
+  footer .logo-social {
+    width: 25%;
   }
 }
 footer .logo {
@@ -829,11 +1071,23 @@ footer .posts-container {
     width: 45%;
   }
 }
+@media (min-width: 1025px) {
+  footer .posts-container {
+    padding-top: 0;
+    width: 25%;
+  }
+}
 @media (min-width: 768px) and (max-width: 1024px) {
   footer .sub-nav {
     display: flex;
     width: 100%;
     padding-top: 1rem;
+  }
+}
+@media (min-width: 1025px) {
+  footer .sub-nav {
+    display: flex;
+    justify-content: space-between;
   }
 }
 footer .nav-title {
@@ -850,6 +1104,11 @@ footer .footer-nav {
 @media (min-width: 768px) and (max-width: 1024px) {
   footer .footer-nav {
     width: 50%;
+    padding: unset;
+  }
+}
+@media (min-width: 1025px) {
+  footer .footer-nav {
     padding: unset;
   }
 }
@@ -872,6 +1131,12 @@ footer .questions {
     width: 50%;
   }
 }
+@media (min-width: 1025px) {
+  footer .questions {
+    padding-bottom: unset;
+    width: 65%;
+  }
+}
 footer .questions .contact-way_container {
   display: flex;
   flex-direction: column;
@@ -889,22 +1154,29 @@ footer .questions .contact-way_footer .howto {
   color: #999999;
   font-size: 0.9rem;
 }
-footer .rights {
+@media (min-width: 1025px) {
+  footer .questions .contact-way_footer .howto {
+    width: 70%;
+  }
+}
+
+.rights {
   background-color: #0D0D0D;
+  font-family: "Poppins", sans-serif;
   padding: 3rem 0;
   display: flex;
   justify-content: center;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  footer .rights {
+  .rights {
     flex-grow: 1;
   }
 }
-footer .rights .copy {
+.rights .copy {
   color: #999999;
   font-size: 0.8rem;
   text-align: center;
 }
-footer .rights .Colorlib-footer {
+.rights .Colorlib-footer {
   color: #C18E3C;
 }/*# sourceMappingURL=style.css.map */
