--- a/style.scss
+++ b/style.scss
@@ -24,13 +24,18 @@ header {
   background-color: $tertiary-bgcolor;
   font-family: $primary-font;
 
+  @media (min-width: 1025px) {
+    position: relative;
+  }
+
   .header-container {
     padding: 2rem;
     @include flex-column;
 
     @media (min-width: 768px) {
-      @include flex-row;
+      flex-direction: row;
       gap: 2rem;
+      justify-content: center;
     }
   }
 
@@ -145,10 +150,26 @@ header {
     padding: 5rem 1rem;
   }
 
+  @media (min-width: 1025px) {
+    flex-direction: row;
+    padding: 0rem 2.5rem;
+    justify-content: center;
+    position: absolute;
+    top: 8rem;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 5;
+  }
+
 
   .navbar-container {
     padding: 1rem 0;
+
+    @media (min-width: 1025px) {
+      display: flex;
+    }
   }
+
 
   .icon {
     position: absolute;
@@ -157,6 +178,10 @@ header {
     border: none;
     cursor: pointer;
     filter: invert(100%);
+
+    @media (min-width: 1025px) {
+      position: unset;
+    }
   }
 
   .icon img {
@@ -167,10 +192,19 @@ header {
     }
   }
 
+  .list {
+    @media (min-width: 1025px) {
+      padding: 0rem 1rem;
+    }
+  }
+
   .pages {
-    display: flex;
-    flex-direction: column;
+    @include flex-column;
     gap: 1rem;
+
+    @media (min-width: 1025px) {
+      flex-direction: row;
+    }
   }
 
   .pages li a {
@@ -203,6 +237,10 @@ header {
   @include flex-column;
   justify-content: center;
   color: $dark-behind_color;
+
+  @media (min-width: 1024px) {
+    position: relative;
+  }
 
   .Introduction-container {
     @include flex-column;
@@ -266,7 +304,7 @@ header {
     color: $sub-topic_color;
     font-size: 2rem;
 
-    @media (min-width: 768px) and (max-width: 1024px) {
+    @media (min-width: 768px) {
       font-size: 3rem;
     }
   }
@@ -276,7 +314,13 @@ header {
   background-color: $primary-bgcolor;
 
   @media (min-width: 768px) and (max-width:1024px) {
-    @include flex-row;
+    flex-direction: row;
+  }
+
+  @media (min-width: 1025px) {
+    @include flex-row_reverse;
+    column-gap: 3rem;
+    padding: 5rem 3rem;
   }
 
   .sub-white {
@@ -284,10 +328,11 @@ header {
     color: $dark-behind_color;
     text-align: center;
 
-    @media (min-width:768px) and (max-width: 1024px) {
+    @media (min-width:768px) {
       width: 50%;
       font-size: 3rem;
     }
+
   }
 
 
@@ -301,12 +346,24 @@ header {
     @media (min-width:768px) and (max-width: 1024px) {
       width: 70%;
     }
+
+    @media (min-width: 1025px) {
+      width: 50%;
+    }
   }
 
   .about-image img {
     width: 100%;
     position: relative;
     top: 6rem;
+    border-radius: 5px;
+
+    @media (min-width: 1025px) {
+      top: 8rem;
+      width: 60%;
+      left: 50%;
+      transform: translateX(-50%);
+    }
   }
 
   .about-image {
@@ -323,6 +380,10 @@ header {
 .perfomance-container {
   @include flex-column;
 
+  @media (min-width: 1025px) {
+    width: 50%;
+  }
+
   .section-intro_left {
     align-items: unset;
   }
@@ -331,14 +392,22 @@ header {
     text-align: left;
   }
 
-  .section-description {
+  .section-description_left {
     text-align: left;
     padding-bottom: 2rem;
+
+    @media (min-width: 1025px) {
+      width: 100%;
+    }
   }
 }
 
 .form {
   background-color: $card-bgcolor;
+
+  @media (min-width: 1025px) {
+    width: 50%;
+  }
 
   .evaluation {
     @include flex-column;
@@ -358,15 +427,23 @@ header {
 
   .form-requirements {
     padding: 1rem 0;
-    display: flex;
-    flex-direction: column;
+    @include flex-column;
     gap: 2rem;
+
+    @media (min-width:1025px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+    }
   }
 
   .box {
     display: flex;
     flex-direction: column;
     background-color: $secondary-bgcolor;
+  }
+
+  .full-width_desktop {
+    width: 100%;
   }
 
   label {
@@ -402,6 +479,8 @@ header {
 
 .reminder {
   background: linear-gradient(rgba(193, 142, 60, 0.896), rgba(193, 142, 60, 0.896)), url(./images/legal-advicer.webp);
+  background-size: cover;
+  background-position: center;
   @include flex-column;
   width: 100%;
   padding: 2rem 0;
@@ -410,10 +489,19 @@ header {
     position: relative;
   }
 
+  @media (min-width: 1025px) {
+    flex-direction: row;
+    justify-content: center;
+  }
+
   .reminder-content {
     @include flex-column;
     padding: 1rem 0.5rem;
     gap: 0.5rem;
+
+    @media (min-width: 1025px) {
+      flex-direction: row;
+    }
   }
 
   .reminder-title {
@@ -422,7 +510,7 @@ header {
     font-size: 2rem;
     font-weight: 500;
 
-    @media (min-width: 768px) and (max-width: 1024px) {
+    @media (min-width: 768px) {
       font-size: 2.5rem;
       font-weight: 600;
     }
@@ -436,6 +524,10 @@ header {
 
   .reminder-button {
     padding-top: 1rem;
+
+    @media (min-width: 1025px) {
+      padding: 1.5rem;
+    }
 
     .reminder-button_absolute {
       @media (min-width: 768px) and (max-width: 1024px) {
@@ -453,6 +545,11 @@ header {
     font-family: $primary-font;
     padding: 1rem;
     font-size: 0.8rem;
+    font-weight: 600;
+
+    @media (min-width: 1025px) {
+      padding: 1rem 1.5rem;
+    }
 
     .reminder-btn_absolute {
       @media (min-width: 768px) and (max-width: 1024px) {
@@ -469,13 +566,20 @@ header {
     font-family: $primary-font;
     padding: 1rem;
     font-size: 0.8rem;
+    font-weight: 600;
+  }
+
+  .reminder-content_center {
+    align-items: center;
+  
+    @media (min-width: 1025px){
+      @include flex-column;
+      padding: 4rem 0;
+    }
   }
 
 }
 
-.reminder-content_center {
-  align-items: center;
-}
 
 footer {
   @include flex-column;
@@ -486,10 +590,16 @@ footer {
     @include flex-column;
     padding: 6rem 0.5rem 0rem 0.5rem;
 
-    @media (min-width: 768px) {
-      @include flex-row;
+    @media (min-width: 768px) and (max-width: 1024px){
+      flex-direction: row;
       padding: 6rem 1rem 0rem 1rem;
       flex-wrap: wrap;
+    }
+
+    @media (min-width: 1025px){
+      flex-direction: row;
+      padding: 5rem 3rem;
+      justify-content: space-around;
     }
   }
 
@@ -498,6 +608,10 @@ footer {
       display: flex;
       flex-direction: column;
       width: 50%;
+    }
+
+    @media (min-width: 1025px){
+      width: 25%;
     }
   }
 
@@ -559,18 +673,30 @@ footer {
     @include flex-column;
     padding-top: 2rem;
 
-    @media (min-width: 768px) and (max-width: 1024px){
+    @media (min-width: 768px) and (max-width: 1024px) {
       width: 45%;
+    }
+
+
+    @media (min-width: 1025px){
+      padding-top: 0;
+      width: 25%;
     }
   }
 
-    .sub-nav{
-      @media (min-width: 768px) and (max-width: 1024px){
-        display: flex;
-        width: 100%;
-        padding-top: 1rem;
-      }
+  .sub-nav {
+    @media (min-width: 768px) and (max-width: 1024px) {
+      display: flex;
+      width: 100%;
+      padding-top: 1rem;
     }
+
+    @media (min-width: 1025px){
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
   .nav-title {
     color: $dark-behind_color;
     font-size: 1.2rem;
@@ -582,8 +708,12 @@ footer {
     @include flex-column;
     padding: 1.5rem 0;
 
-    @media (min-width: 768px) and (max-width: 1024px){
+    @media (min-width: 768px) and (max-width: 1024px) {
       width: 50%;
+      padding: unset;
+    }
+
+    @media (min-width: 1025px){
       padding: unset;
     }
 
@@ -606,6 +736,11 @@ footer {
       width: 50%;
     }
 
+    @media (min-width: 1025px){
+      padding-bottom: unset;
+      width: 65%;
+    }
+
     .contact-way_container {
       display: flex;
       flex-direction: column;
@@ -624,28 +759,34 @@ footer {
       .howto {
         color: $paragraph_color;
         font-size: 0.9rem;
+
+        @media (min-width: 1025px){
+          width: 70%;
+        }
       }
     }
   }
+}
 
-  .rights {
-    background-color: $rights-bgcolor;
-    padding: 3rem 0;
-    display: flex;
-    justify-content: center;
 
-    @media (min-width: 768px) and (max-width: 1024px){
-      flex-grow: 1;
-    }
+.rights {
+  background-color: $rights-bgcolor;
+  font-family: $primary-font;
+  padding: 3rem 0;
+  display: flex;
+  justify-content: center;
 
-    .copy {
-      color: $paragraph_color;
-      font-size: 0.8rem;
-      text-align: center;
-    }
+  @media (min-width: 768px) and (max-width: 1024px) {
+    flex-grow: 1;
+  }
 
-    .Colorlib-footer {
-      color: $main-color;
-    }
+  .copy {
+    color: $paragraph_color;
+    font-size: 0.8rem;
+    text-align: center;
+  }
+
+  .Colorlib-footer {
+    color: $main-color;
   }
 }
