Working with BEM and Nesting

--- a/_variables.scss
+++ b/_variables.scss
@@ -8,10 +8,10 @@ $secondary-bgcolor:#f7f7f7;
 $tertiary-bgcolor:#191919;
 $card-bgcolor:#ffffff;
 $perfomance-image_bgcolor:#404040;
-$reminder-btn_bgcolor: #000000;
+$reminder__button__btn_bgcolor: #000000;
 $rights-bgcolor: #0D0D0D;
 
 $dark-behind_color: #ffffff;
 $sub-topic_color: #000000cc;
 $paragraph_color: #999999;
-$card-title_color:#000000;
+$card__text__title_color:#000000;
