--- a/_cards.scss
+++ b/_cards.scss
@@ -1,7 +1,7 @@
 @import "variables";
 @import "mixins";
 
-.simple-card {
+.simple__content {
   @include flex-column;
   gap: 1rem;
 
@@ -12,7 +12,7 @@
     justify-content: center;
   }
 
-  &_content {
+  .simple__card {
     display: flex;
     gap: 2rem;
     background-color: $tertiary-bgcolor;
@@ -21,41 +21,47 @@
     @media (min-width: 768px) and (max-width: 1024px) {
       width: 48%;
     }
-  }
 
-  .content-image {
-    background-color: $primary-bgcolor;
-    border-radius: 50%;
-    padding: 0.5rem;
-    height: fit-content;
-  }
 
-  .content-image img {
-    width: 50px;
-    padding: 0.5rem;
-    filter: invert(50%);
-  }
+    &__image {
+      background-color: $primary-bgcolor;
+      border-radius: 50%;
+      padding: 0.5rem;
+      height: fit-content;
+    }
 
-  .content-title {
-    font-family: $primary-font;
-    color: $dark-behind_color;
-    font-size: 2rem;
-    font-weight: 600;
-  }
+    &__image img {
+      width: 50px;
+      padding: 0.5rem;
+      filter: invert(50%);
+    }
 
-  .content-description {
-    font-family: $primary-font;
-    color: $main-color;
-    font-weight: 600;
-    font-size: 0.8rem;
+    .content__text {
 
-    @media (min-width: 1025px) {
-      text-wrap: nowrap;
+      &__title {
+        font-family: $primary-font;
+        color: $dark-behind_color;
+        font-size: 2rem;
+        font-weight: 600;
+      }
+
+
+
+      &__description {
+        font-family: $primary-font;
+        color: $main-color;
+        font-weight: 600;
+        font-size: 0.8rem;
+
+        @media (min-width: 1025px) {
+          text-wrap: nowrap;
+        }
+      }
     }
   }
 }
 
-.simple-card_top {
+.simple__content--top {
   @media (min-width: 1025px) {
     flex-direction: row;
     position: absolute;
@@ -64,13 +70,13 @@
     transform: translateX(-50%);
   }
 
-  .simple-card_content {
+  .simple__card {
     padding: 1.5rem 3rem;
     align-items: center;
   }
 }
 
-.cards-container {
+.cards__container {
   @include flex-column;
   padding: 4rem 0;
   gap: 2rem;
@@ -83,102 +89,107 @@
     padding: 4rem 2rem;
   }
 
-  .card-content {
+  .card {
     @include flex-column;
     background-color: $card-bgcolor;
     position: relative;
     box-shadow: 1px 1px 12px #C18E3C;
-  }
-
-  .card-top_image img {
-    width: 100%;
-
-    @media (min-width: 768px) and (max-width: 1024px) {
-      height: 40vh;
-      object-fit: cover;
-    }
-  }
 
 
-  .over-image {
-    position: absolute;
-    background-color: $secondary-bgcolor;
-    border-radius: 50%;
-    bottom: 9rem;
-    left: 1rem;
-    max-width: fit-content;
+    &__image img {
+      width: 100%;
 
-    @media (min-width: 768px) and (max-width: 1024px) {
-      left: 3rem;
-      right: 3rem;
-      bottom: 24rem;
-      display: flex;
+
+
+      @media (min-width: 768px) and (max-width: 1024px) {
+        height: 40vh;
+        object-fit: cover;
+      }
     }
 
-    @media (min-width: 1025px) {
-      bottom: 12rem;
-      left: 2rem;
-    }
-  }
 
-  .over-image img {
-    filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
-    width: 4rem;
-    padding: 0.5rem;
-  }
-
-  .over-image_upper {
-    background-color: $main-color;
-    bottom: 12rem;
-
-    @media (min-width: 768px) and (max-width: 1024px) {
-      bottom: 20rem;
+    &__stamp {
+      position: absolute;
+      background-color: $secondary-bgcolor;
+      border-radius: 50%;
+      bottom: 9rem;
       left: 1rem;
-      right: auto;
+      max-width: fit-content;
+
+      @media (min-width: 768px) and (max-width: 1024px) {
+        left: 3rem;
+        right: 3rem;
+        bottom: 24rem;
+        display: flex;
+      }
+
+      @media (min-width: 1025px) {
+        bottom: 12rem;
+        left: 2rem;
+      }
+
     }
 
-    @media (min-width: 1025px) {
+
+    &__stamp img {
+      filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
+      width: 4rem;
+      padding: 0.5rem;
+    }
+
+    .card__stamp--upper {
+      background-color: $main-color;
       bottom: 12rem;
-      left: 0.5rem;
+
+      @media (min-width: 768px) and (max-width: 1024px) {
+        bottom: 20rem;
+        left: 1rem;
+        right: auto;
+      }
+
+      @media (min-width: 1025px) {
+        bottom: 12rem;
+        left: 0.5rem;
+      }
+
+
+
+      img {
+        filter: invert(1);
+        width: 5rem;
+      }
     }
 
-  }
+    &__text {
+      padding: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
 
-  .over-image_upper img {
-    filter: invert(1);
-    width: 5rem;
-  }
 
-  .card-text {
-    padding: 2rem;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
+      &__title {
+        font-family: $secondary-font;
+        color: $card__text__title_color;
+        font-size: 1.5rem;
+        font-weight: 600;
+      }
 
-  .card-title {
-    font-family: $secondary-font;
-    color: $card-title_color;
-    font-size: 1.5rem;
-    font-weight: 600;
+      &__description {
+        font-family: $primary-font;
+        color: $paragraph_color;
+      }
+    }
   }
-
-  .card-description {
-    font-family: $primary-font;
-    color: $paragraph_color;
-  }
-
 }
 
-.simple-card_form {
+.simple__content--form {
   @include flex-column;
 
   @media (min-width: 1025px) {
     gap: 0;
   }
 
-  .simple-card_lighter {
-    //content
+  .simple__card--lighter {
     background-color: inherit;
     gap: 1rem;
     padding: 2rem 0rem;
@@ -186,56 +197,60 @@
     @media (min-width: 768px) and (max-width: 1024px) {
       width: 90%;
     }
-  }
 
 
-  .content-image_lighter {
-    background-color: $perfomance-image_bgcolor;
 
-    @media (min-width: 768px) and (max-width: 1024px) {
-      display: flex;
-      height: fit-content;
-    }
-  }
+    .simple__card__image--lighter {
+      background-color: $perfomance-image_bgcolor;
 
-  .content-image_lighter img {
-    width: 4rem;
-    filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
+      @media (min-width: 768px) and (max-width: 1024px) {
+        display: flex;
+        height: fit-content;
+      }
 
-    @media (min-width: 768px) and (max-width: 1024px) {
-      padding: 0;
-    }
-  }
 
-  .content-title_thin {
-    font-family: $secondary-font;
-    font-size: 1.1rem;
+      img {
+        width: 4rem;
+        filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
 
-    @media (min-width: 768px) and (max-width: 1024px) {
-      font-size: 1.3rem;
+        @media (min-width: 768px) and (max-width: 1024px) {
+          padding: 0;
+        }
+      }
+
     }
 
-    @media (min-width: 1025px) {
-      font-size: 1.5rem;
+
+    .content__text__title--thin {
+      font-family: $secondary-font;
+      font-size: 1.1rem;
+
+      @media (min-width: 768px) and (max-width: 1024px) {
+        font-size: 1.3rem;
+      }
+
+      @media (min-width: 1025px) {
+        font-size: 1.5rem;
+      }
     }
-  }
 
-  .content-description_gray {
-    color: $paragraph_color;
-    font-weight: normal;
+    .content__text__description--gray {
+      color: $paragraph_color;
+      font-weight: normal;
 
-    @media (min-width: 768px) and (max-width: 1024px) {
-      font-size: 1rem;
-    }
+      @media (min-width: 768px) and (max-width: 1024px) {
+        font-size: 1rem;
+      }
 
-    @media (min-width: 1025px) {
-      font-size: 1rem;
-      text-wrap: wrap;
+      @media (min-width: 1025px) {
+        font-size: 1rem;
+        text-wrap: wrap;
+      }
     }
   }
 }
 
-.cards-hover_container {
+.card__hover__container {
   //card recent case
   @include flex-column;
   gap: 3rem;
@@ -250,100 +265,103 @@
     gap: 1rem;
   }
 
-  .card-hover_content {
+  .card__hover {
     @include flex-column;
     position: relative;
 
     @media (min-width: 768px) {
       width: 25%;
     }
-  }
 
-  .bg-image {
-    width: 100%;
-    position: relative;
 
-    @media (min-width: 1025px) {
-      height: 20rem;
-    }
+    &__bg {
+      width: 100%;
+      position: relative;
 
-    &:hover {
+      @media (min-width: 1025px) {
+        height: 20rem;
+      }
+
       img {
-        transition: .5s;
-        filter: brightness(0.5);
+        width: 100%;
+
+        @media (min-width:768px) and (max-width:1024px) {
+          height: 40vh;
+          object-fit: cover;
+        }
+
+        @media (min-width: 1025px) {
+          height: 100%;
+          object-fit: cover;
+        }
+
+        .higher {
+          height: 17.5rem;
+          object-fit: cover;
+
+          @media (min-width: 768px) and (max-width: 1024px) {
+            height: 40vh;
+          }
+
+          @media (min-width: 1025px) {
+            height: 13rem;
+          }
+        }
       }
 
-      .card-hover_text {
-        opacity: 1;
-        padding-left: .5rem;
-        transition: .5s;
+      &:hover {
+        img {
+          transition: .5s;
+          filter: brightness(0.5);
+        }
+
+        .card__hover__text {
+          opacity: 1;
+          padding-left: .5rem;
+          transition: .5s;
+        }
+      }
+
+
+      &:hover::before {
+        @media (min-width: 1025px) {
+          content: "";
+          position: absolute;
+          width: calc(100% - 2rem);
+          height: calc(100% - 2rem);
+          border: 2px solid $main-color;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          z-index: 5;
+        }
+      }
+
+      .card__hover__text {
+        position: absolute;
+        bottom: 1rem;
+        left: 1rem;
+
+        @media (min-width: 1025px) {
+          opacity: 0;
+        }
+
+
+        &__title {
+          font-family: $secondary-font;
+          color: $dark-behind_color;
+        }
+
+        &__description {
+          font-family: $primary-font;
+          color: $paragraph_color;
+        }
       }
     }
-  }
-
-  .bg-image:hover::before {
-    @media (min-width: 1025px) {
-      content: "";
-      position: absolute;
-      width: calc(100% - 2rem);
-      height: calc(100% - 2rem);
-      border: 2px solid $main-color;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      z-index: 5;
-    }
-  }
-
-  .bg-image img {
-    width: 100%;
-
-    @media (min-width:768px) and (max-width:1024px) {
-      height: 40vh;
-      object-fit: cover;
-    }
-
-    @media (min-width: 1025px) {
-      height: 100%;
-      object-fit: cover;
-    }
-  }
-
-  .higher {
-    height: 17.5rem;
-    object-fit: cover;
-
-    @media (min-width: 768px) and (max-width: 1024px) {
-      height: 40vh;
-    }
-
-    @media (min-width: 1025px) {
-      height: 13rem;
-    }
-  }
-
-  .card-hover_text {
-    position: absolute;
-    bottom: 1rem;
-    left: 1rem;
-
-    @media (min-width: 1025px) {
-      opacity: 0;
-    }
-  }
-
-  .card-hover_text .card-hover_title {
-    font-family: $secondary-font;
-    color: $dark-behind_color;
-  }
-
-  .card-hover_description {
-    font-family: $primary-font;
-    color: $paragraph_color;
   }
 }
 
-.customer-card_container {
+.customer__container {
   @include flex-column;
   gap: 1.5rem;
   padding-top: 2rem;
@@ -356,7 +374,7 @@
     padding: 4.5rem;
   }
 
-  .customer-card_content {
+  .customer__card {
     display: flex;
     flex-direction: column-reverse;
     background-color: $card-bgcolor;
@@ -364,68 +382,79 @@
     font-family: $primary-font;
     box-shadow: 1px 1px 12px #C18E3C;
 
-  }
+    &__info {
+      display: flex;
+      gap: 0.5rem;
+      align-items: center;
+      padding-top: 1rem;
 
-  .customer-info {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-    padding-top: 1rem;
-  }
 
-  .customer-info img {
-    width: 5rem;
-    border-radius: 50%;
-  }
+      img {
+        width: 5rem;
+        border-radius: 50%;
+      }
 
-  .name {
-    font-weight: 500;
-    font-size: 1.2rem;
-  }
+      .badge {
+        @media (min-width: 1025px) {
+          @include flex-column;
+        }
 
-  .post {
-    color: $main-color;
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
 
-  .customer-feedback {
-    color: $sub-topic_color;
-    font-size: 0.9rem;
+        &__name {
+          font-weight: 500;
+          font-size: 1.2rem;
+        }
+
+        &__post {
+          color: $main-color;
+          font-size: 0.8rem;
+          font-weight: 600;
+        }
+      }
+    }
+
+    &__feedback {
+      color: $sub-topic_color;
+      font-size: 0.9rem;
+    }
   }
 }
 
-.simple-card_footer {
+.simple__content--footer {
 
-  .simple-card_content {
+  .simple__card {
     padding: 0;
     width: unset;
 
-    .footer-card_image img {
+    &__image__footer img {
       width: 5rem;
       height: 5rem;
       border-radius: 5%;
       object-fit: cover;
     }
 
-    .post-title {
-      color: $paragraph_color;
-      font-weight: 600;
-    }
+    .content__text {
 
-    .date {
-      color: $main-color;
-      font-size: 0.8rem;
-    }
+      &__title {
+        color: $paragraph_color;
+        font-weight: 600;
+        font-size: 1rem;
+      }
 
-    .author {
-      color: $main-color;
-      font-size: 0.8rem;
-    }
+      &__date {
+        color: $main-color;
+        font-size: 0.8rem;
+      }
 
-    .comments {
-      color: $main-color;
-      font-size: 0.8rem;
+      &__author {
+        color: $main-color;
+        font-size: 0.8rem;
+      }
+
+      &__comments {
+        color: $main-color;
+        font-size: 0.8rem;
+      }
     }
   }
 }
