--- a/style.css
+++ b/style.css
@@ -221,14 +221,13 @@
   color: #999999;
   font-weight: normal;
 }
-@media (min-width: 768px) and (max-width: 1024px) {
+@media (min-width: 768px) {
   .simple__content--form .simple__card--lighter .content__text__description--gray {
     font-size: 1rem;
   }
 }
 @media (min-width: 1025px) {
   .simple__content--form .simple__card--lighter .content__text__description--gray {
-    font-size: 1rem;
     text-wrap: wrap;
   }
 }
