--- a/_variables.scss
+++ b/_variables.scss
@@ -15,3 +15,13 @@ $dark-behind_color: #ffffff;
 $sub-topic_color: #000000cc;
 $paragraph_color: #999999;
 $card__text__title_color:#000000;
+
+//var para buttons
+
+$primary-button_bgcolor: #C18E3C;
+$secondary-button_bgcolor: #000000;
+$tertiary-button_bgcolor: #ffffff;
+
+$primary-button_color: #ffffff;
+$secondary-button_color: #ffffff;
+$tertiary-button_color: #000000;
