--- a/_cards.scss
+++ b/_cards.scss
@@ -12,7 +12,7 @@
     justify-content: center;
   }
 
-  .simple__card {
+  .simple-card {
     display: flex;
     gap: 2rem;
     background-color: $tertiary-bgcolor;
@@ -38,24 +38,98 @@
     }
 
     .content__text {
+      @media (min-width: 1025px) {
+        @include flex-column;
+      }
 
-      &__title {
+      .content__title {
         font-family: $primary-font;
         color: $dark-behind_color;
         font-size: 2rem;
         font-weight: 600;
+
+        &--thin {
+          font-family: $secondary-font;
+          font-size: 1.1rem;
+
+          @media (min-width: 768px) and (max-width: 1024px) {
+            font-size: 1.3rem;
+          }
+
+          @media (min-width: 1025px) {
+            font-size: 1.5rem;
+          }
+        }
+
+
+        &--footer {
+          color: $paragraph_color;
+          font-weight: 600;
+          font-size: 1rem;
+        }
       }
 
 
 
-      &__description {
+      .content__description {
         font-family: $primary-font;
         color: $main-color;
         font-weight: 600;
         font-size: 0.8rem;
+        text-transform: uppercase;
 
         @media (min-width: 1025px) {
           text-wrap: nowrap;
+        }
+
+
+        &--gray {
+          color: $paragraph_color;
+          font-weight: normal;
+          text-transform: none;
+
+          @media (min-width: 768px) {
+            font-size: 1rem;
+          }
+
+          @media (min-width: 1025px) {
+            text-wrap: wrap;
+          }
+        }
+      }
+    }
+  }
+
+
+  &--footer {
+
+    .simple-card {
+      padding: 0;
+      width: unset;
+
+      &__image__footer img {
+        width: 5rem;
+        height: 5rem;
+        border-radius: 5%;
+        object-fit: cover;
+      }
+
+      .content__info {
+        flex-direction: row;
+
+        .content__date {
+          color: $main-color;
+          font-size: 0.8rem;
+        }
+
+        .content__author {
+          color: $main-color;
+          font-size: 0.8rem;
+        }
+
+        .content__comments {
+          color: $main-color;
+          font-size: 0.8rem;
         }
       }
     }
@@ -71,7 +145,7 @@
     transform: translateX(-50%);
   }
 
-  .simple__card {
+  .simple-card {
     padding: 1.5rem 3rem;
     align-items: center;
   }
@@ -96,11 +170,8 @@
     position: relative;
     box-shadow: 1px 1px 12px #C18E3C;
 
-
-    &__image img {
+    &__image {
       width: 100%;
-
-
 
       @media (min-width: 768px) and (max-width: 1024px) {
         height: 40vh;
@@ -121,12 +192,10 @@
         left: 3rem;
         right: 3rem;
         bottom: 24rem;
-        display: flex;
       }
 
       @media (min-width: 1025px) {
         bottom: 12rem;
-        left: 2rem;
       }
 
     }
@@ -166,19 +235,18 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
+    }
 
+    &__title {
+      font-family: $secondary-font;
+      color: $card__text__title_color;
+      font-size: 1.5rem;
+      font-weight: 600;
+    }
 
-      &__title {
-        font-family: $secondary-font;
-        color: $card__text__title_color;
-        font-size: 1.5rem;
-        font-weight: 600;
-      }
-
-      &__description {
-        font-family: $primary-font;
-        color: $paragraph_color;
-      }
+    &__description {
+      font-family: $primary-font;
+      color: $paragraph_color;
     }
   }
 }
@@ -190,7 +258,7 @@
     gap: 0;
   }
 
-  .simple__card--lighter {
+  .simple-card--lighter {
     background-color: inherit;
     gap: 1rem;
     padding: 2rem 0rem;
@@ -201,7 +269,7 @@
 
 
 
-    .simple__card__image--lighter {
+    .simple-card__image--lighter {
       background-color: $perfomance-image_bgcolor;
 
       @media (min-width: 768px) and (max-width: 1024px) {
@@ -219,33 +287,6 @@
         }
       }
 
-    }
-
-
-    .content__text__title--thin {
-      font-family: $secondary-font;
-      font-size: 1.1rem;
-
-      @media (min-width: 768px) and (max-width: 1024px) {
-        font-size: 1.3rem;
-      }
-
-      @media (min-width: 1025px) {
-        font-size: 1.5rem;
-      }
-    }
-
-    .content__text__description--gray {
-      color: $paragraph_color;
-      font-weight: normal;
-
-      @media (min-width: 768px) {
-        font-size: 1rem;
-      }
-
-      @media (min-width: 1025px) {
-        text-wrap: wrap;
-      }
     }
   }
 }
@@ -347,12 +388,12 @@
         }
 
 
-        &__title {
+        .card__hover__title {
           font-family: $secondary-font;
           color: $dark-behind_color;
         }
 
-        &__description {
+        .card__hover__description {
           font-family: $primary-font;
           color: $paragraph_color;
         }
@@ -382,7 +423,7 @@
     font-family: $primary-font;
     box-shadow: 1px 1px 12px #C18E3C;
 
-    &__info {
+    .customer__info {
       display: flex;
       gap: 0.5rem;
       align-items: center;
@@ -395,10 +436,7 @@
       }
 
       .badge {
-        @media (min-width: 1025px) {
-          @include flex-column;
-        }
-
+        @include flex-column;
 
         &__name {
           font-weight: 500;
@@ -409,52 +447,15 @@
           color: $main-color;
           font-size: 0.8rem;
           font-weight: 600;
+          text-transform: uppercase;
         }
       }
     }
 
-    &__feedback {
+    .customer__feedback {
       color: $sub-topic_color;
       font-size: 0.9rem;
-    }
-  }
-}
-
-.simple__content--footer {
-
-  .simple__card {
-    padding: 0;
-    width: unset;
-
-    &__image__footer img {
-      width: 5rem;
-      height: 5rem;
-      border-radius: 5%;
-      object-fit: cover;
-    }
-
-    .content__text {
-
-      &__title {
-        color: $paragraph_color;
-        font-weight: 600;
-        font-size: 1rem;
-      }
-
-      &__date {
-        color: $main-color;
-        font-size: 0.8rem;
-      }
-
-      &__author {
-        color: $main-color;
-        font-size: 0.8rem;
-      }
-
-      &__comments {
-        color: $main-color;
-        font-size: 0.8rem;
-      }
+      font-weight: 500;
     }
   }
 }
