--- a/style.css
+++ b/style.css
@@ -11,45 +11,112 @@
     justify-content: center;
   }
 }
-.simple__content .simple__card {
+.simple__content .simple-card {
   display: flex;
   gap: 2rem;
   background-color: #191919;
   padding: 2rem;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  .simple__content .simple__card {
+  .simple__content .simple-card {
     width: 48%;
   }
 }
-.simple__content .simple__card__image {
+.simple__content .simple-card__image {
   background-color: #262626;
   border-radius: 50%;
   padding: 0.5rem;
   height: -moz-fit-content;
   height: fit-content;
 }
-.simple__content .simple__card__image img {
+.simple__content .simple-card__image img {
   width: 50px;
   padding: 0.5rem;
   filter: invert(50%);
 }
-.simple__content .simple__card .content__text__title {
+@media (min-width: 1025px) {
+  .simple__content .simple-card .content__text {
+    display: flex;
+    flex-direction: column;
+  }
+}
+.simple__content .simple-card .content__text .content__title {
   font-family: "Poppins", sans-serif;
   color: #ffffff;
   font-size: 2rem;
   font-weight: 600;
 }
-.simple__content .simple__card .content__text__description {
+.simple__content .simple-card .content__text .content__title--thin {
+  font-family: "Cormorant Garamond", serif;
+  font-size: 1.1rem;
+}
+@media (min-width: 768px) and (max-width: 1024px) {
+  .simple__content .simple-card .content__text .content__title--thin {
+    font-size: 1.3rem;
+  }
+}
+@media (min-width: 1025px) {
+  .simple__content .simple-card .content__text .content__title--thin {
+    font-size: 1.5rem;
+  }
+}
+.simple__content .simple-card .content__text .content__title--footer {
+  color: #999999;
+  font-weight: 600;
+  font-size: 1rem;
+}
+.simple__content .simple-card .content__text .content__description {
   font-family: "Poppins", sans-serif;
   color: #C18E3C;
   font-weight: 600;
   font-size: 0.8rem;
+  text-transform: uppercase;
 }
 @media (min-width: 1025px) {
-  .simple__content .simple__card .content__text__description {
+  .simple__content .simple-card .content__text .content__description {
     text-wrap: nowrap;
   }
+}
+.simple__content .simple-card .content__text .content__description--gray {
+  color: #999999;
+  font-weight: normal;
+  text-transform: none;
+}
+@media (min-width: 768px) {
+  .simple__content .simple-card .content__text .content__description--gray {
+    font-size: 1rem;
+  }
+}
+@media (min-width: 1025px) {
+  .simple__content .simple-card .content__text .content__description--gray {
+    text-wrap: wrap;
+  }
+}
+.simple__content--footer .simple-card {
+  padding: 0;
+  width: unset;
+}
+.simple__content--footer .simple-card__image__footer img {
+  width: 5rem;
+  height: 5rem;
+  border-radius: 5%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.simple__content--footer .simple-card .content__info {
+  flex-direction: row;
+}
+.simple__content--footer .simple-card .content__info .content__date {
+  color: #C18E3C;
+  font-size: 0.8rem;
+}
+.simple__content--footer .simple-card .content__info .content__author {
+  color: #C18E3C;
+  font-size: 0.8rem;
+}
+.simple__content--footer .simple-card .content__info .content__comments {
+  color: #C18E3C;
+  font-size: 0.8rem;
 }
 
 @media (min-width: 1025px) {
@@ -61,7 +128,7 @@
     transform: translateX(-50%);
   }
 }
-.simple__content--top .simple__card {
+.simple__content--top .simple-card {
   padding: 1.5rem 3rem;
   align-items: center;
 }
@@ -89,11 +156,11 @@
   position: relative;
   box-shadow: 1px 1px 12px #C18E3C;
 }
-.cards__container .card__image img {
+.cards__container .card__image {
   width: 100%;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  .cards__container .card__image img {
+  .cards__container .card__image {
     height: 40vh;
     -o-object-fit: cover;
        object-fit: cover;
@@ -113,13 +180,11 @@
     left: 3rem;
     right: 3rem;
     bottom: 24rem;
-    display: flex;
   }
 }
 @media (min-width: 1025px) {
   .cards__container .card__stamp {
     bottom: 12rem;
-    left: 2rem;
   }
 }
 .cards__container .card__stamp img {
@@ -154,13 +219,13 @@
   flex-direction: column;
   gap: 1rem;
 }
-.cards__container .card__text__title {
+.cards__container .card__title {
   font-family: "Cormorant Garamond", serif;
   color: #000000;
   font-size: 1.5rem;
   font-weight: 600;
 }
-.cards__container .card__text__description {
+.cards__container .card__description {
   font-family: "Poppins", sans-serif;
   color: #999999;
 }
@@ -174,61 +239,33 @@
     gap: 0;
   }
 }
-.simple__content--form .simple__card--lighter {
+.simple__content--form .simple-card--lighter {
   background-color: inherit;
   gap: 1rem;
   padding: 2rem 0rem;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  .simple__content--form .simple__card--lighter {
+  .simple__content--form .simple-card--lighter {
     width: 90%;
   }
 }
-.simple__content--form .simple__card--lighter .simple__card__image--lighter {
+.simple__content--form .simple-card--lighter .simple-card__image--lighter {
   background-color: #404040;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  .simple__content--form .simple__card--lighter .simple__card__image--lighter {
+  .simple__content--form .simple-card--lighter .simple-card__image--lighter {
     display: flex;
     height: -moz-fit-content;
     height: fit-content;
   }
 }
-.simple__content--form .simple__card--lighter .simple__card__image--lighter img {
+.simple__content--form .simple-card--lighter .simple-card__image--lighter img {
   width: 4rem;
   filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  .simple__content--form .simple__card--lighter .simple__card__image--lighter img {
+  .simple__content--form .simple-card--lighter .simple-card__image--lighter img {
     padding: 0;
-  }
-}
-.simple__content--form .simple__card--lighter .content__text__title--thin {
-  font-family: "Cormorant Garamond", serif;
-  font-size: 1.1rem;
-}
-@media (min-width: 768px) and (max-width: 1024px) {
-  .simple__content--form .simple__card--lighter .content__text__title--thin {
-    font-size: 1.3rem;
-  }
-}
-@media (min-width: 1025px) {
-  .simple__content--form .simple__card--lighter .content__text__title--thin {
-    font-size: 1.5rem;
-  }
-}
-.simple__content--form .simple__card--lighter .content__text__description--gray {
-  color: #999999;
-  font-weight: normal;
-}
-@media (min-width: 768px) {
-  .simple__content--form .simple__card--lighter .content__text__description--gray {
-    font-size: 1rem;
-  }
-}
-@media (min-width: 1025px) {
-  .simple__content--form .simple__card--lighter .content__text__description--gray {
-    text-wrap: wrap;
   }
 }
 
@@ -332,11 +369,11 @@
     opacity: 0;
   }
 }
-.card__hover__container .card__hover__bg .card__hover__text__title {
+.card__hover__container .card__hover__bg .card__hover__text .card__hover__title {
   font-family: "Cormorant Garamond", serif;
   color: #ffffff;
 }
-.card__hover__container .card__hover__bg .card__hover__text__description {
+.card__hover__container .card__hover__bg .card__hover__text .card__hover__description {
   font-family: "Poppins", sans-serif;
   color: #999999;
 }
@@ -365,63 +402,34 @@
   font-family: "Poppins", sans-serif;
   box-shadow: 1px 1px 12px #C18E3C;
 }
-.customer__container .customer__card__info {
+.customer__container .customer__card .customer__info {
   display: flex;
   gap: 0.5rem;
   align-items: center;
   padding-top: 1rem;
 }
-.customer__container .customer__card__info img {
+.customer__container .customer__card .customer__info img {
   width: 5rem;
   border-radius: 50%;
 }
-@media (min-width: 1025px) {
-  .customer__container .customer__card__info .badge {
-    display: flex;
-    flex-direction: column;
-  }
+.customer__container .customer__card .customer__info .badge {
+  display: flex;
+  flex-direction: column;
 }
-.customer__container .customer__card__info .badge__name {
+.customer__container .customer__card .customer__info .badge__name {
   font-weight: 500;
   font-size: 1.2rem;
 }
-.customer__container .customer__card__info .badge__post {
+.customer__container .customer__card .customer__info .badge__post {
   color: #C18E3C;
   font-size: 0.8rem;
   font-weight: 600;
+  text-transform: uppercase;
 }
-.customer__container .customer__card__feedback {
+.customer__container .customer__card .customer__feedback {
   color: rgba(0, 0, 0, 0.8);
   font-size: 0.9rem;
-}
-
-.simple__content--footer .simple__card {
-  padding: 0;
-  width: unset;
-}
-.simple__content--footer .simple__card__image__footer img {
-  width: 5rem;
-  height: 5rem;
-  border-radius: 5%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.simple__content--footer .simple__card .content__text__title {
-  color: #999999;
-  font-weight: 600;
-  font-size: 1rem;
-}
-.simple__content--footer .simple__card .content__text__date {
-  color: #C18E3C;
-  font-size: 0.8rem;
-}
-.simple__content--footer .simple__card .content__text__author {
-  color: #C18E3C;
-  font-size: 0.8rem;
-}
-.simple__content--footer .simple__card .content__text__comments {
-  color: #C18E3C;
-  font-size: 0.8rem;
+  font-weight: 500;
 }
 
 * {
@@ -440,6 +448,41 @@ a {
 
 li {
   list-style: none;
+}
+
+.button {
+  text-decoration: none;
+  text-transform: uppercase;
+  font-family: "Poppins", sans-serif;
+  padding: 1rem;
+  font-size: 0.8rem;
+  font-weight: 600;
+  border: none;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 10px;
+}
+.button:hover {
+  opacity: 0.6;
+}
+.button--big {
+  padding: 1.5rem;
+  font-size: 1rem;
+}
+.button--primary {
+  background-color: #C18E3C;
+  color: #ffffff;
+}
+.button--secondary {
+  background-color: #000000;
+  color: #ffffff;
+}
+.button--tertiary {
+  background-color: #ffffff;
+  color: #000000;
+}
+.button--radius {
+  border-radius: 5%;
 }
 
 .header {
@@ -477,7 +520,7 @@ li {
   max-width: 50px;
   filter: invert(58%) sepia(36%) saturate(675%) hue-rotate(358deg) brightness(92%) contrast(95%);
 }
-@media (min-width: 1025px) {
+@media (min-width: 768px) {
   .header .logo__image {
     align-self: center;
   }
@@ -543,6 +586,7 @@ li {
 @media (min-width: 768px) {
   .header .contact .contact__description {
     font-size: 0.8rem;
+    font-weight: 600;
   }
 }
 @media (min-width: 768px) {
@@ -573,7 +617,7 @@ li {
 @media (min-width: 1025px) {
   .navbar {
     flex-direction: row;
-    padding: 0rem 2.5rem;
+    padding: 1rem;
     justify-content: center;
     position: absolute;
     top: 8rem;
@@ -582,15 +626,7 @@ li {
     z-index: 5;
   }
 }
-.navbar__container {
-  padding: 1rem 0;
-}
-@media (min-width: 1025px) {
-  .navbar__container {
-    display: flex;
-  }
-}
-.navbar__container .icon {
+.navbar .icon {
   position: absolute;
   top: 1rem;
   background-color: unset;
@@ -599,54 +635,50 @@ li {
   filter: invert(100%);
 }
 @media (min-width: 1025px) {
-  .navbar__container .icon {
+  .navbar .icon {
     position: unset;
   }
 }
-.navbar__container .icon img {
+.navbar .icon img {
   width: 1.5rem;
 }
 @media (min-width: 768px) {
-  .navbar__container .icon img {
+  .navbar .icon img {
     width: 1.3rem;
   }
 }
-@media (min-width: 1025px) {
-  .navbar__container .list {
-    padding: 0rem 1rem;
-  }
+.navbar .icon--search {
+  top: unset;
+  bottom: 1rem;
+  filter: invert(100%);
 }
-.navbar__container .list .pages {
+.navbar__list {
   display: flex;
   flex-direction: column;
   gap: 1rem;
 }
 @media (min-width: 1025px) {
-  .navbar__container .list .pages {
+  .navbar__list {
+    padding: 0rem 1rem;
     flex-direction: row;
   }
 }
-.navbar__container .list .pages li a {
+.navbar__list li a {
   color: #ffffff;
   font-size: 1.2rem;
   font-weight: 600;
 }
 @media (min-width: 768px) {
-  .navbar__container .list .pages li a {
+  .navbar__list li a {
     font-size: 1rem;
     font-weight: 500;
   }
 }
-.navbar__container .list #top {
+.navbar__list #top {
   color: #C18E3C;
 }
-.navbar__container .search {
-  top: unset;
-  bottom: 1rem;
-  filter: invert(100%);
-}
 
-.Introduction {
+.introduction {
   background: linear-gradient(rgba(0, 0, 0, 0.566), rgba(0, 0, 0, 0.566)), url(./images/experience.webp);
   height: 100vh;
   display: flex;
@@ -655,32 +687,26 @@ li {
   color: #ffffff;
 }
 @media (min-width: 1024px) {
-  .Introduction {
+  .introduction {
     position: relative;
   }
 }
-.Introduction__container {
+.introduction__container {
   display: flex;
   flex-direction: column;
   gap: 4rem;
   padding: 1rem;
 }
-.Introduction__container .Introduction__title h1 {
+.introduction__container .introduction__title h1 {
   font-size: 3rem;
   font-family: "Cormorant Garamond", serif;
 }
-.Introduction__container .Introduction__title p {
+.introduction__container .introduction__title p {
   font-family: "Poppins", sans-serif;
   color: #999999;
   font-size: 1.2rem;
   font-weight: 500;
   padding-top: 1.5rem;
-}
-.Introduction__container .btn a {
-  color: #ffffff;
-  font-family: "Poppins", sans-serif;
-  background-color: #C18E3C;
-  padding: 1.5rem;
 }
 
 .section {
@@ -713,7 +739,6 @@ li {
 
 .section--card {
   background-color: #262626;
-  padding: 4rem 1rem;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
   .section--card {
@@ -766,50 +791,52 @@ li {
     width: 50%;
   }
 }
-.section--black .about__container {
+
+.about__container {
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 768px) and (max-width: 1024px) {
-  .section--black .about__container .about__image {
+  .about__container .about__image {
     padding: 0rem 3rem;
   }
 }
-.section--black .about__container .about__image img {
+.about__container .about__image img {
   width: 100%;
   position: relative;
   top: 6rem;
   border-radius: 5px;
 }
 @media (min-width: 1025px) {
-  .section--black .about__container .about__image img {
+  .about__container .about__image img {
     top: 8rem;
     width: 60%;
     left: 50%;
     transform: translateX(-50%);
   }
 }
-.section--black .perfomance__container {
+
+.perfomance__container {
   display: flex;
   flex-direction: column;
 }
 @media (min-width: 1025px) {
-  .section--black .perfomance__container {
+  .perfomance__container {
     width: 50%;
   }
 }
-.section--black .perfomance__container .section__intro--left {
+.perfomance__container .section__intro--left {
   align-items: unset;
 }
-.section--black .perfomance__container .section__intro__subtitle--white--left {
+.perfomance__container .section__intro__subtitle--white--left {
   text-align: left;
 }
-.section--black .perfomance__container .section__description--left {
+.perfomance__container .section__description--left {
   text-align: left;
   padding-bottom: 2rem;
 }
 @media (min-width: 1025px) {
-  .section--black .perfomance__container .section__description--left {
+  .perfomance__container .section__description--left {
     width: 100%;
   }
 }
@@ -837,6 +864,7 @@ li {
   color: #C18E3C;
   font-weight: bold;
   font-size: 1rem;
+  text-transform: uppercase;
 }
 .form__container .form__intro__subtitle {
   font-weight: normal;
@@ -918,59 +946,29 @@ li {
 @media (min-width: 1025px) {
   .reminder__content {
     flex-direction: row;
+    align-items: center;
   }
 }
 .reminder__content .reminder__text {
   display: flex;
   flex-direction: column;
 }
-.reminder__content .reminder__text__title {
+.reminder__content .reminder__text .reminder__title {
   font-family: "Cormorant Garamond", serif;
   color: #ffffff;
   font-size: 2rem;
   font-weight: 500;
 }
 @media (min-width: 768px) {
-  .reminder__content .reminder__text__title {
+  .reminder__content .reminder__text .reminder__title {
     font-size: 2.5rem;
     font-weight: 600;
   }
 }
-.reminder__content .reminder__text__sub {
+.reminder__content .reminder__text .reminder__sub {
   font-family: "Poppins", sans-serif;
   color: #ffffff;
   font-weight: 300;
-}
-.reminder__content .reminder__button {
-  padding-top: 1rem;
-}
-@media (min-width: 1025px) {
-  .reminder__content .reminder__button {
-    padding: 1.5rem;
-  }
-}
-.reminder__content .reminder__button__btn {
-  text-decoration: none;
-  color: #ffffff;
-  background-color: #000000;
-  font-family: "Poppins", sans-serif;
-  padding: 1rem;
-  font-size: 0.8rem;
-  font-weight: 600;
-}
-@media (min-width: 1025px) {
-  .reminder__content .reminder__button__btn {
-    padding: 1rem 1.5rem;
-  }
-}
-.reminder__content .reminder__button__btn--white {
-  text-decoration: none;
-  color: #000000;
-  background-color: #ffffff;
-  font-family: "Poppins", sans-serif;
-  padding: 1rem;
-  font-size: 0.8rem;
-  font-weight: 600;
 }
 .reminder__content--center {
   align-items: center;
@@ -981,6 +979,9 @@ li {
     flex-direction: column;
     padding: 4rem 0;
   }
+}
+.reminder__content--center .reminder__buttons {
+  flex-direction: row;
 }
 
 footer {
@@ -1035,10 +1036,6 @@ footer .footer__container .social__logo__image img {
   footer .footer__container .social__logo__image img {
     width: 15%;
   }
-}
-footer .footer__container .social__logo .social__brand {
-  display: flex;
-  flex-direction: column;
 }
 footer .footer__container .social__logo .social__brand__name {
   font-size: 1.5rem;
@@ -1168,25 +1165,4 @@ footer .footer__container .footer__nav .footer__nav__questions .contact__us__con
   footer .footer__container .footer__nav .footer__nav__questions .contact__us__container .contact__us__howto {
     width: 70%;
   }
-}
-
-.rights {
-  background-color: #0D0D0D;
-  font-family: "Poppins", sans-serif;
-  padding: 3rem 0;
-  display: flex;
-  justify-content: center;
-}
-@media (min-width: 768px) and (max-width: 1024px) {
-  .rights {
-    flex-grow: 1;
-  }
-}
-.rights .copy {
-  color: #999999;
-  font-size: 0.8rem;
-  text-align: center;
-}
-.rights .Colorlib-footer {
-  color: #C18E3C;
 }/*# sourceMappingURL=style.css.map */
